--- a/oes-core/src/main/resources/templates/student/exam/list.html
+++ b/oes-core/src/main/resources/templates/student/exam/list.html
@@ -11,8 +11,13 @@
     <%include("../../student/include/header.html"){} %>
     <!-- 左侧菜单栏 -->
     <%layout("../../student/include/sider.html",{name:"exam-list"}){}%>
+    <!-- 引入全局 js 脚本文件 -->
+    <% include("../../include/js.html"){} %>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
+        <%
+        #ajax examTable: {
+        %>
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <div class="container-fluid">
@@ -70,21 +75,18 @@
                 </div><!-- /.row -->
             </div>
         </section>
+        <%include("api/paper-api.html"){}%>
+        <%include("api/practice-api.html"){}%>
+        <%}%>
     </div>
-    <!-- 引入footer -->
-    <%include("../../include/footer.html"){}%>
-    <!-- Control Sidebar -->
     <aside class="control-sidebar control-sidebar-dark">
         <!-- Control sidebar content goes here -->
     </aside>
+    <!-- 引入footer -->
+    <% include("../../include/footer.html"){}%>
+    <%include("../main/api.html"){}%>
+    <!-- Control Sidebar -->
 </div>
-<!-- 引入全局 js 脚本文件 -->
-<% include("../../include/js.html"){} %>
-<!-- 自定义封装 -->
-<script src="/static/js/OesUtil.js"></script>
-<%include("api/paper-api.html"){}%>
-<%include("api/practice-api.html"){}%>
 </body>
 </html>
-
 
