--- a/oes-core/src/main/resources/templates/student/self/update-pass-api.html
+++ b/oes-core/src/main/resources/templates/student/self/update-pass-api.html
@@ -1,3 +1,5 @@
+<!-- 校验 -->
+<script src="/webjars/AdminLTE/3.0.0/plugins/jquery-validation/jquery.validate.min.js"></script>
 <script>
     // 提交密码
     $(function () {
