--- a/oes-core/src/main/resources/templates/student/announce/api.html
+++ b/oes-core/src/main/resources/templates/student/announce/api.html
@@ -23,7 +23,7 @@
     }
 
     // 初始化表单
-    const columns = [{
+    OesUtil.initNormalTable('#pageInfo', "/api/announce/list", "get", [{
         title: '标题',
         field: 'title',
         sortable: false
@@ -40,9 +40,7 @@
         title: '操作',
         events: handle,//事件
         formatter: operateFormatter//html
-    }];
-
-    OesUtil.initNormalTable('#pageInfo', "/api/announce/list", "get", columns);
+    }]);
 
 </script>
 
