--- a/oes-core/src/main/resources/templates/student/self/help.html
+++ b/oes-core/src/main/resources/templates/student/self/help.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>OES | 学生帮助中心</title>
-    <!-- css style -->
+    <title>OES | 帮助中心</title>
     <%include("../../include/css.html"){}%>
 </head>
 <body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
 <div class="wrapper">
-    <!-- 顶部导航栏部分 -->
-    <%include("../include/header.html"){} %>
+    <%include("../../student/include/header.html"){} %>
     <!-- 左侧菜单栏 -->
     <%layout("../include/sider.html",{name:"help"}){}%>
+    <!-- 引入全局 js 脚本文件 -->
+    <% include("../../include/js.html"){} %>
     <!-- 右侧内容部分 -->
     <div class="content-wrapper">
-        <!-- Content Header (Page header) -->
+        <%
+        #ajax helpTable: {
+        %>
         <section class="content-header">
             <div class="container-fluid">
                 <div class="row mb-2">
@@ -83,16 +85,17 @@
                 </div>
             </div>
         </section>
+        <%}%>
     </div>
-    <!-- 引入footer -->
-    <%include("../../include/footer.html"){}%>
-    <!-- Control Sidebar -->
     <aside class="control-sidebar control-sidebar-dark">
         <!-- Control sidebar content goes here -->
     </aside>
+    <!-- 引入footer -->
+    <% include("../../include/footer.html"){}%>
+    <%include("../main/api.html"){}%>
+    <!-- Control Sidebar -->
 </div>
-<!-- 引入全局 js 脚本文件 -->
-<%include("../../include/js.html"){}%>
 </body>
 </html>
+
 
