--- a/oes-core/src/main/resources/templates/student/self/home.html
+++ b/oes-core/src/main/resources/templates/student/self/home.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>OES | 学生首页</title>
-    <!-- 引入全局 css 文件 -->
+    <title>OES | 帮助中心</title>
     <%include("../../include/css.html"){}%>
 </head>
 <body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
 <div class="wrapper">
-    <!-- 引入头部 -->
-    <% include("../include/header.html"){} %>
+    <%include("../../student/include/header.html"){} %>
     <!-- 左侧菜单栏 -->
     <% layout("../include/sider.html",{name:"home"}){} %>
-    <!-- 右侧内容部分 -->
+    <!-- 引入全局 js 脚本文件 -->
+    <% include("../../include/js.html"){} %>
     <div class="content-wrapper">
+        <!-- 右侧内容部分 -->
+        <%
+        #ajax homeTable: {
+        %>
         <!-- Content Header (Page header) -->
         <section class="content-header">
             <div class="container-fluid">
@@ -86,16 +89,16 @@
                 </div>
             </div>
         </section>
+        <%}%>
     </div>
-    <!-- 引入footer -->
-    <%include("../../include/footer.html"){}%>
-    <!-- Control Sidebar -->
     <aside class="control-sidebar control-sidebar-dark">
         <!-- Control sidebar content goes here -->
     </aside>
+    <!-- 引入footer -->
+    <% include("../../include/footer.html"){}%>
+    <%include("../main/api.html"){}%>
+    <!-- Control Sidebar -->
 </div>
-<!-- 引入全局 js 脚本文件 -->
-<% include("../../include/js.html"){} %>
 </body>
 </html>
 
