--- a/oes-core/src/main/resources/templates/admin/include/sider.html
+++ b/oes-core/src/main/resources/templates/admin/include/sider.html
@@ -26,7 +26,7 @@
             <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                 <!-- 首页 -->
                 <li class="nav-item">
-                    <a href="/admin/home" class="nav-link ${name == 'home'?'active':''}">
+                    <a href="#" id="home" class="nav-link">
                         <i class="nav-icon fas fa-globe"></i>
                         <p>首页</p>
                     </a>
@@ -34,7 +34,7 @@
 
                 <!-- 系统公告 -->
                 <li class="nav-item">
-                    <a href="/admin/announce" class="nav-link  ${strutil.contain(name,'announce')?'active':''}">
+                    <a href="#" id="announce" class="nav-link">
                         <i class="nav-icon fas fa-paper-plane"></i>
                         <p>公告管理</p>
                     </a>
@@ -42,7 +42,7 @@
 
                 <!-- 学院管理 -->
                 <li class="nav-item">
-                    <a href="/admin/academy" class="nav-link  ${name == 'academy'?'active':''}">
+                    <a href="#" id="academy" class="nav-link">
                         <i class="nav-icon fas fa-landmark"></i>
                         <p>学院管理</p>
                     </a>
@@ -50,7 +50,7 @@
 
                 <!-- 教师管理 -->
                 <li class="nav-item">
-                    <a href="/admin/teacher" class="nav-link ${name == 'teacher'?'active':''}">
+                    <a href="#" id="teacher" class="nav-link">
                         <i class="nav-icon fas fa-id-badge"></i>
                         <p>教师管理</p>
                     </a>
@@ -58,7 +58,7 @@
 
                 <!-- 管理员管理 -->
                 <li class="nav-item">
-                    <a href="/admin" class="nav-link ${name == 'admin'?'active':''}">
+                    <a href="#" id="admin" class="nav-link ">
                         <i class="nav-icon fas fa-flag"></i>
                         <p>管理员管理</p>
                     </a>
