--- a/oes-core/src/main/resources/templates/auth/api.html
+++ b/oes-core/src/main/resources/templates/auth/api.html
@@ -1,52 +1,3 @@
 <script>
-    // 学生登录
-    $('#stuBtn').click(function () {
-        // 密码加密
-        let username = $("#stuNumber").val();
-        let password = encryptPass($("#stuPassword").val());
-        $.post("/api/student/login", {"username": username, "password": password}).done(function (data) {
-            if (data.state === "success") {
-                toastr.success('认证成功');
-                $(this).delay(1000).queue(function () {
-                    window.location.href = "/student/home";
-                });
-            } else {
-                toastr.error(data.message);
-            }
-        })
-    });
-
-    // 教师登录
-    $('#teacherBtn').click(function () {
-        // 密码加密
-        let username = $("#teacherNumber").val();
-        let password = encryptPass($("#teacherPassword").val());
-        $.post("/api/teacher/login", {"username": username, "password": password}).done(function (data) {
-            if (data.state === "success") {
-                toastr.success('认证成功');
-                $(this).delay(1000).queue(function () {
-                    window.location.href = "/teacher/home/" + data.data;
-                });
-            } else {
-                toastr.error(data.message);
-            }
-        })
-    });
-
-    // 管理员登录
-    $('#adminBtn').click(function () {
-        // 密码加密
-        let username = $("#adminId").val();
-        let password = encryptPass($("#adminPassword").val());
-        $.post("/api/admin/login", {"username": username, "password": password}).done(function (data) {
-            if (data.state === "success") {
-                toastr.success('认证成功');
-                $(this).delay(1000).queue(function () {
-                    window.location.href = "/admin/home";
-                });
-            } else {
-                toastr.error(data.message);
-            }
-        })
-    });
+    $('#stuBtn').click(function(){let username=$("#stuNumber").val();let password=encryptPass($("#stuPassword").val());$.post("/api/student/login",{"username":username,"password":password}).done(function(data){if(data.state==="success"){toastr.success('认证成功');$(this).delay(1000).queue(function(){window.location.href="/student/index";});}else{toastr.error(data.message);}})});$('#teacherBtn').click(function(){let username=$("#teacherNumber").val();let password=encryptPass($("#teacherPassword").val());$.post("/api/teacher/login",{"username":username,"password":password}).done(function(data){if(data.state==="success"){toastr.success('认证成功');$(this).delay(1000).queue(function(){window.location.href="/teacher/home/"+data.data;});}else{toastr.error(data.message);}})});$('#adminBtn').click(function(){let username=$("#adminId").val();let password=encryptPass($("#adminPassword").val());$.post("/api/admin/login",{"username":username,"password":password}).done(function(data){if(data.state==="success"){toastr.success('认证成功');$(this).delay(1000).queue(function(){window.location.href="/admin/index";});}else{toastr.error(data.message);}})});
 </script>
