--- a/oes-core/src/main/resources/templates/include/css.html
+++ b/oes-core/src/main/resources/templates/include/css.html
@@ -18,6 +18,8 @@
 <link rel="stylesheet" href="/static/plugins/jquery-confirm/jquery-confirm.min.css">
 <!-- bootstrap table -->
 <link rel="stylesheet" href="/webjars/bootstrap-table/1.16.0/dist/bootstrap-table.min.css">
+<!-- iCheck -->
+<link rel="stylesheet" href="/static/plugins/iCheck/square/blue.css"/>
 <style>
     body {
         font-family: 'Microsoft Yahei', Arial, Helvetica, sans-serif;
