--- a/oes-core/src/main/resources/templates/include/js.html
+++ b/oes-core/src/main/resources/templates/include/js.html
@@ -23,3 +23,9 @@
 <!-- bootstrap-table -->
 <script src="/webjars/bootstrap-table/1.16.0/dist/bootstrap-table.min.js"></script>
 <script src="/webjars/bootstrap-table/1.16.0/dist/locale/bootstrap-table-zh-CN.min.js"></script>
+<!-- oesUtil -->
+<script src="/static/js/OesUtil.js"></script>
+<script src="/static/plugins/jquery-countdown/jquery.countdown.min.js"></script>
+<script src="/static/plugins/echarts/echarts.min.js"></script>
+<!-- iCheck -->
+<script src="/static/plugins/iCheck/icheck.min.js"></script>
