--- a/oes-core/src/main/resources/templates/student/score/list.html
+++ b/oes-core/src/main/resources/templates/student/score/list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>OES | 分数列表</title>
+    <title>OES | 学生端</title>
     <%include("../../include/css.html"){}%>
 </head>
 <body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
