--- a/oes-core/src/main/resources/templates/admin/academy/api.html
+++ b/oes-core/src/main/resources/templates/admin/academy/api.html
@@ -1,100 +1,3 @@
 <script>
-
-    function operateFormatter(value, row, index) {
-        return [
-            '  <button class="btn btn-success btn-sm" onclick="goUpdate(' + row.id + ')">编辑 </button>\n' +
-            '  <button class="btn btn-sm btn-danger" onclick="deleteAcademy(' + row.id + ') ">删除</button>\n'
-        ].join('');
-    }
-
-    // 初始化表单
-    const columns = [{
-        title: '编号',
-        field: 'id',
-        sortable: false,
-        formatter: function (value, row, index) {
-            return index + 1;
-        }
-    }, {
-        title: '学院',
-        field: 'name',
-        sortable: false
-    }, {
-        field: 'operate',
-        title: '操作',
-        formatter: operateFormatter//html
-    }];
-
-    OesUtil.initNormalTable('#academyInfo', "/api/academy/list", "get", columns);
-
-    // 删除学院
-    function deleteAcademy(id) {
-        OesUtil.confirm("确定删除吗？", function () {
-            $.post("/api/academy/delete/" + id).done(function (data) {
-                if (data.state === "success") {
-                    OesUtil.refreshTable("#academyInfo");
-                } else {
-                    toastr.error(data.message);
-                }
-            })
-        })
-    }
-
-    // 修改学院信息
-    function updateAcademy() {
-        OesUtil.confirm("确定修改吗?", function () {
-            let data = $("#update-form").serialize();
-            $.post("/api/academy/update", data).done(function (data) {
-                if (data.state === "success") {
-                    OesUtil.closeModal("#updateModal");
-                    $('#update-form')[0].reset();
-                    OesUtil.refreshTable("#academyInfo");
-                } else {
-                    toastr.error(data.message);
-                }
-            })
-        })
-    }
-
-    // 增加学院
-    $("#saveBtn").click(function () {
-        OesUtil.confirm("确定增加学院吗?", function () {
-            let data = $("#save-form").serialize();
-            $.post("/api/academy/save", data).done(function (data) {
-                if (data.state === "success") {
-                    OesUtil.closeModal("#saveModal");
-                    $('#save-form')[0].reset();
-                    OesUtil.refreshTable("#academyInfo");
-                } else {
-                    toastr.error(data.message);
-                }
-            })
-        })
-    });
-
-    // 获取学院
-    function getAcademy(id) {
-        $.get("/api/academy/" + id, function (data) {
-            $('#id').val(data.id);
-            $('#name').val(data.name);
-        })
-    }
-
-    // 启动模态框
-    function goSave() {
-        $("#saveModal").modal({
-            show: true,
-            backdrop: 'static'
-        });
-    }
-
-
-    // 启动修改模态框
-    function goUpdate(id) {
-        getAcademy(id);
-        $("#updateModal").modal({
-            show: true,
-            backdrop: 'static'
-        });
-    }
+    function operateFormatter(value,row,index){return['  <button class="btn btn-success btn-sm" onclick="goUpdate('+row.id+')">编辑 </button>\n'+'  <button class="btn btn-sm btn-danger" onclick="deleteAcademy('+row.id+') ">删除</button>\n'].join('');}OesUtil.initNormalTable('#academyInfo',"/api/academy/list","get",[{title:'编号',field:'id',sortable:false,formatter:function(value,row,index){return index+1;}},{title:'学院',field:'name',sortable:false},{field:'operate',title:'操作',formatter:operateFormatter}]);function deleteAcademy(id){OesUtil.confirm("确定删除吗？",function(){$.post("/api/academy/delete/"+id).done(function(data){if(data.state==="success"){OesUtil.refreshTable("#academyInfo");}else{toastr.error(data.message);}})})}function updateAcademy(){OesUtil.confirm("确定修改吗?",function(){let data=$("#update-form").serialize();$.post("/api/academy/update",data).done(function(data){if(data.state==="success"){OesUtil.closeModal("#updateModal");$('#update-form')[0].reset();OesUtil.refreshTable("#academyInfo");}else{toastr.error(data.message);}})})}$("#saveBtn").click(function(){OesUtil.confirm("确定增加学院吗?",function(){let data=$("#save-form").serialize();$.post("/api/academy/save",data).done(function(data){if(data.state==="success"){OesUtil.closeModal("#saveModal");$('#save-form')[0].reset();OesUtil.refreshTable("#academyInfo");}else{toastr.error(data.message);}})})});function getAcademy(id){$.get("/api/academy/"+id,function(data){$('#id').val(data.id);$('#name').val(data.name);})}function goSave(){$("#saveModal").modal({show:true,backdrop:'static'});}function goUpdate(id){getAcademy(id);$("#updateModal").modal({show:true,backdrop:'static'});}
 </script>
