--- a/oes-core/src/main/resources/templates/admin/admin/list.html
+++ b/oes-core/src/main/resources/templates/admin/admin/list.html
@@ -1,70 +1,42 @@
-<!DOCTYPE html>
-<html lang="zh_CN">
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>OES | 管理员列表</title>
-    <!-- 引入全局 css 文件 -->
-    <% include("../../include/css.html"){} %>
-</head>
-<body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
-
-<div class="wrapper">
-    <!-- 引入头部 -->
-    <% layout("../include/header.html"){} %>
-    <!-- 左侧菜单栏 -->
-    <% layout("../include/sider.html",{name:'admin'}){} %>
-    <!-- 右侧内容部分 -->
-    <div class="content-wrapper">
-        <!-- Content Header (Page header) -->
-        <section class="content-header">
-            <div class="container-fluid">
-                <div class="row mb-2">
-                    <div class="col-sm-6">
-                        <h1>管理员管理</h1>
-                    </div>
-                </div>
+<!-- Content Header (Page header) -->
+<section class="content-header">
+    <div class="container-fluid">
+        <div class="row mb-2">
+            <div class="col-sm-6">
+                <h1>管理员管理</h1>
             </div>
-        </section>
+        </div>
+    </div>
+</section>
 
-        <section class="content">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="card">
-                            <div class="card-header">
-                                <h3 class="card-title">管理员列表</h3>
-                                <div class="card-tools">
-                                    <div class="input-group input-group-sm">
-                                        <button class="btn btn-success btn-sm" onclick="goSave()"><i class="fa fa-plus"></i> 新增管理员</button>
-                                    </div>
-                                </div>
+<section class="content">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12">
+                <div class="card">
+                    <div class="card-header">
+                        <h3 class="card-title">管理员列表</h3>
+                        <div class="card-tools">
+                            <div class="input-group input-group-sm">
+                                <button class="btn btn-primary btn-sm" onclick="goSave()">新增管理员</button>
                             </div>
-                            <!-- /.card-header -->
-                            <div class="card-body table-responsive">
-                                <!-- bootstrap table 渲染 -->
-                                <table id="adminInfo" class="table table-bordered table-striped text-nowrap"></table>
-                            </div>
-                            <!-- /.card-body -->
                         </div>
                     </div>
-                    <!-- /.card -->
+                    <!-- /.card-header -->
+                    <div class="card-body table-responsive">
+                        <!-- bootstrap table 渲染 -->
+                        <table id="adminInfo" class="table table-bordered table-striped text-nowrap"></table>
+                    </div>
+                    <!-- /.card-body -->
                 </div>
-            </div><!-- /.row -->
-        </section>
-    </div>
-
-    <!-- 增加模态框 -->
-    <%include("save-modal.html"){} %>
-    <!-- 引入footer -->
-    <% include("../../include/footer.html"){} %>
-</div><!-- 引入全局 js 脚本文件 -->
-<% include("../../include/js.html"){} %>
-<!-- 自定義工具 -->
-<script src="/static/js/OesUtil.js"></script>
+            </div>
+            <!-- /.card -->
+        </div>
+    </div><!-- /.row -->
+</section>
+<!-- 增加模态框 -->
+<%include("save-modal.html"){} %>
 <!-- 接口 -->
 <% include("api.html"){} %>
-</body>
-</html>
 
 
