--- a/oes-core/src/main/resources/templates/admin/include/header.html
+++ b/oes-core/src/main/resources/templates/admin/include/header.html
@@ -5,7 +5,7 @@
             <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-            <a href="/admin/home/${session.admin.id}" class="nav-link">首页</a>
+            <a href="/admin/index" class="nav-link">首页</a>
         </li>
     </ul>
 
@@ -26,7 +26,7 @@
                 </div>
                 <!-- Message End -->
                 <div class="dropdown-divider"></div>
-                <a href="/admin/update/pass" class="dropdown-item">
+                <a href="#" id="update" class="dropdown-item">
                     <!-- Message Start -->
                     <div class="media">
                         <div class="media-body text-center">
