--- a/oes-core/src/main/resources/templates/admin/self/api.html
+++ b/oes-core/src/main/resources/templates/admin/self/api.html
@@ -1,15 +1,3 @@
 <script>
-    // 修改密码
-    function updatePass() {
-        OesUtil.confirm("确定修改密码吗?", function () {
-            let data = $("#update-pass-form").serialize();
-            $.post("/api/admin/update/pass", data, function (data) {
-                if (data.state === "success") {
-                    window.location.href = "/admin/login"
-                } else {
-                    toastr.error(data.message);
-                }
-            })
-        })
-    }
+    function updatePass(){OesUtil.confirm("确定修改密码吗?",function(){let data=$("#update-pass-form").serialize();$.post("/api/admin/update/pass",data,function(data){if(data.state==="success"){window.location.href="/admin/login"}else{toastr.error(data.message);}})})}
 </script>
