--- a/oes-core/src/main/resources/templates/student/exam/api/api.html
+++ b/oes-core/src/main/resources/templates/student/exam/api/api.html
@@ -1,18 +1,7 @@
 <script>
 
     // 计时答题核心代码（通过JQuery实现）
-    $(function () {
-        // countdown 用于减少时间，一旦检测到时间为00:00：:00则自动提交试卷
-        $("#clock").countdown("${paper.endTime}", function (event) {
-            $(this).html(event.strftime('%H小时 %M分钟 %S秒'));
-        }).on("finish.countdown", function () {
-            $("#submitBtn").text("考试结束").attr("disabled", "disabled");
-            layer.msg('试卷将在2s后自动提交', {icon: 4});
-            $(this).delay(2000).queue(function () {
-                $("#paper").submit();
-            });
-        });
-    });
+    $(function(){$("#clock").countdown("${paper.endTime}",function(event){$(this).html(event.strftime('%H小时 %M分钟 %S秒'));}).on("finish.countdown",function(){$("#submitBtn").text("考试结束").attr("disabled","disabled");layer.msg('试卷将在2s后自动提交',{icon:4});$(this).delay(2000).queue(function(){$("#paper").submit();});});});
 
     //Flat red color scheme for iCheck
     $('input[type="checkbox"].minimal, input[type="radio"].minimal').iCheck({
