--- a/oes-core/src/main/resources/templates/student/self/update-pass.html
+++ b/oes-core/src/main/resources/templates/student/self/update-pass.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>OES | 修改密码</title>
+    <title>OES | 学生端</title>
     <!-- css style -->
     <%include("../../include/css.html"){}%>
 </head>
