--- a/oes-core/src/main/resources/templates/admin/main/index.html
+++ b/oes-core/src/main/resources/templates/admin/main/index.html
@@ -12,7 +12,7 @@
     <!-- 引入头部 -->
     <% include("../include/header.html"){} %>
     <!-- 左侧菜单栏 -->
-    <% layout("../include/sider.html"){} %>
+    <% layout("../include/sider.html",{name:"index"}){} %>
     <div class="content-wrapper">
         <!-- 异步加载区域 -->
     </div>
